# LatestAIScribe

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
api/: main.py  store.py
api/routes/: encounters.py  health.py  mt.py  notes.py  providers.py  scribe.py
api/ws/: session_events.py
config/: engines.yaml  loader.py  provider_manager.py
config/prompts/: note_generation.yaml
config/providers/: dr_dup.yaml
config/templates/: soap_default.yaml
db/: models.py
frontend/: .eslintrc.json  eslint.config.js  index.html  package.json  quasar.config.js
frontend/src/boot/: axios.js
frontend/src/composables/: usePrinter.js
mcp_servers/: registry.py
mcp_servers/asr/: __init__.py  base.py  faster_whisper_server.py  whisperx_server.py
mcp_servers/data/: __init__.py  medical_dict_server.py  template_server.py
mcp_servers/ehr/: __init__.py  base.py  stub_server.py
mcp_servers/llm/: __init__.py  base.py  ollama_server.py
mt/: __init__.py  config.py  file_namer.py  folder_manager.py  report_emailer.py  sorting.py  sorting_script.py
orchestrator/: graph.py  state.py
orchestrator/edges/: __init__.py  asr_router.py  llm_router.py
orchestrator/nodes/: __init__.py  capture_node.py  context_node.py  delivery_node.py  note_node.py  review_node.py  transcribe_node.py
postprocessor/: __init__.py  medasr_postprocessor.py
quality/: __init__.py
tests/: conftest.py  test_api.py  test_config.py  test_orchestrator.py  test_postprocessor.py  test_registry.py  test_websocket.py
(+18 files in other folders)
