[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ai-scribe-pro"
version = "1.0.0"
description = "AI Scribe Pro — Unified clinical documentation system"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
    # Database
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13.0",
    # Orchestration
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    # LLM
    "httpx>=0.27.0",
    # Configuration
    "pyyaml>=6.0.1",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # MT workflow
    "paramiko>=3.4.0",
    "python-docx>=1.1.0",
    # Utils
    "python-dotenv>=1.0.1",
    "aiofiles>=23.2.1",
]

[project.optional-dependencies]
gpu = [
    "faster-whisper>=1.0.0",
    "whisperx @ git+https://github.com/m-bain/whisperX.git",
    "torch>=2.3.0",
    "torchaudio>=2.3.0",
    "pyannote.audio>=3.1.0",
    "deepfilternet>=0.5.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
